Added new config to support database prefix
Also added a future formula to calculate fortune on weapons for a future
feature i have planned

--- a/src/config.yml
+++ b/src/config.yml
@@ -3,6 +3,7 @@ prefix: '&a[&bMyTokens&a]&f'
 
 #only one can be abled at one time
 database:
+  prefix: 'myt_'
   sqlite:
     use: true
     file: mytokens.db
