--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,8 +6,10 @@ description: A Token Plugin to give players a token style item within the server
 commands:
   mytokens:
     description: Show all commands for mytokens
+    aliases: [tokens]
   myt:
     description: Show all user based commands for MyTokens
+    aliases: [tokensadmin]
     
 permissions:
   #Sign Stuff
